/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.mycompany.mavenproject1;

/**
 *
 * @author Ismael
 */
public enum Genero {
    HipHop, Rock, Metal, Orquesta, RnB, Techno, Jazz, Funk, Soul, Tradicional, Pop;
}
